--- a/bbsdemo/src/main/resources/templates/site/login.html
+++ b/bbsdemo/src/main/resources/templates/site/login.html
@@ -67,7 +67,7 @@
 					<div class="form-group row">
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
-							<input type="text" th:class="|form-control ${usernameMsg!=null?'is-invalid':''|}"
+							<input type="text" th:class="|form-control ${usernameMsg!=null?'is-invalid':''}"
 								   th:value="${param.username}"
 								   name="username" id="username" placeholder="请输入您的账号!" required>
 							<div class="invalid-feedback" th:text="${usernameMsg}">
